Run config for streams-core tests.